padding, font sizes, spacing fixed
made changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,16 +140,17 @@
 .hero-badge {
   display: inline-block;
   background-color: #F1F1F1;
-  padding: 10px 20px;
+  padding: 20px 20px;
   font-family: 'Helvetica', sans-serif;
   border-radius: 100px;
   font-size: 13px;
-  margin-bottom: 20px;
+  margin: 20px;
   border: 1px solid #D9D9D9; 
   box-shadow: 0 4px 12px rgba(0,0,0,0.05);
 }
 
 .status-dot {
+  margin-right: 8px;
   display: inline-block;
   width: 6px;
   height: 6px;
@@ -160,12 +161,11 @@
 }
 
 .hero-subtitle {
-  font-size: 24px;
-  font-weight: 600;
+  font-size: 2rem;
+  font-weight: 200;
   font-family: 'Helvetica', sans-serif;
-  color: #333;
-  margin-bottom: 00px;
-  margin-top: 20px;
+  color: #000;
+  margin: 10px 0;
 }
 
 .hero-title {
@@ -183,11 +183,10 @@
 
 .hero-desc {
   font-size: 13px;
-  color: #4B4B4B;
+  color: #1D1C1C;
   line-height: 1.6;
   font-weight: regular;
   font-family: 'Helvetica', sans-serif;
-  margin-bottom: 30px;
   font-size: small;
 
 }
@@ -249,7 +248,6 @@
 .supported-by h2 {
   font-size: 2.5rem;
   font-weight: bold;
-  margin-bottom: 20px;
   margin-top: 40px;
   color: #000;
 }
@@ -302,7 +300,7 @@
 }
 
 .product-text h3 {
-  font-size: 42px;
+  font-size: 2rem;
   color: #000000;
   margin-bottom: 15px;
   font-family: Helvetica, sans-serif;
@@ -413,6 +411,7 @@
   font-family: Helvetica, sans-serif;
   font-weight: bold;
   font-size: 2rem;
+  color: #000000;
   margin-bottom: 20px;
   padding-right: 20px;
 }
@@ -655,7 +654,7 @@
 .future-heading{
     font-weight: bold;
   font-family: Helvetica, sans-serif;
-  font-size: 2.8rem;
+  font-size: 2.4rem;
   font-weight: 600;
   color: #000000;
   margin-bottom: 15px;
@@ -686,16 +685,15 @@
 
 .team-section {
   text-align: center;
-  padding: 20px 20px;
+  padding: 30px 20px;
   background-color: #fff;
 }
 
 .team-heading {
-padding-bottom: 40px;
-  font-size: 32px;
+  margin: 40px 0 100px 0;
+  font-size: 2.4rem;
   font-weight: bold;
-  margin-bottom: 40px;
-  color: #333;
+  color: #000;
 }
 
 .team-heading .highlight {
@@ -787,11 +785,14 @@ padding-bottom: 40px;
 
 .talk-heading {
     font-family: 'Helvetica', sans-serif;
-  font-size: 36px;
+ 
+    font-size: 2.4rem;
   font-weight: bold;
   margin-bottom: 40px;
-  color: #222;
+  color: #000;
 }
+
+  
 
 
 .talk-container {
@@ -1079,7 +1080,7 @@ padding-bottom: 40px;
 .address-section {
   text-align: center;
   margin-top: 50px;
-  font-style: italic;
+  
   font-size: 16px;
   line-height: 1;
 }
@@ -1089,16 +1090,35 @@ padding-bottom: 40px;
 /* Responsive */
 @media (max-width: 768px) {
 
+  .talk-section h2 {
+    font-size: 1.7rem;
+  }
+
+  .talk-heading h2 {
+    font-size: 1.7rem;
+  }
+  
+  
+.team-heading {
+  margin: 40px 0 100px 0;
+  font-size: 1.7rem;
+  font-weight: bold;
+  color: #000;
+}
+
+
   
 /* Add this to your CSS */
 .address-section {
   text-align: center;
   margin: 20px;
-  font-style: italic;
   font-size: 16px;
   line-height: 1;
 }
 
+  .address-section h2 {
+    font-size: 1.7rem;
+  }
 
 
   .privacy-container {
